--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '24.0.1'
     defaultConfig {
         applicationId "tw.housemart.test.retrofit"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -31,6 +31,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.google.android.gms:play-services-maps:9.4.0'
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
-    compile group: 'org.apache.mina', name: 'mina-core', version: '2.0.16'
+    compile 'org.apache.mina:mina-core:2.0.16'
     testCompile 'junit:junit:4.12'
 }
